# exceptional_typing

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  setup.sh  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
fastlane/: .env.example  Appfile  Fastfile  Gemfile  Matchfile  Pluginfile  README.md  RELEASE.md  setup_app.rb
fastlane/metadata/en-US/: description.txt  keywords.txt  marketing_url.txt  name.txt  privacy_url.txt  release_notes.txt  subtitle.txt  support_url.txt
scripts/: demo.ts
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/icons/: create_placeholder_icons.cjs  generate_icons.cjs  generate_icons.sh  icon.icns
src-tauri/src/: keyboard.rs  keyboard_test.rs  lessons.rs  lib.rs  main.rs  metrics.rs  models.rs  storage.rs
src/lib/: constants.ts  defaults.ts
src/lib/components/: AppIcon.svelte  AutoFormatToggle.svelte  CodeThemeSelector.svelte  CourseOverview.svelte  CourseOverview.test.ts  CourseView.svelte  CourseView.test.ts  DailyTestView.svelte  KeyboardLayoutSelector.svelte  LessonPicker.svelte  LessonPicker.test.ts  LessonView.svelte  ModeToggle.svelte  PracticeView.svelte  SidebarNavigation.test.ts  StatsDisplay.svelte  TypingAnalytics.svelte  TypingArea.svelte  TypingHint.svelte  VirtualKeyboard.svelte
src/lib/data/: commandLessons.test.ts  commandLessons.ts  courses.ts  lessons.ts  shortcutLessons.ts
src/lib/i18n/: de.ts  en.ts  index.ts
src/lib/services/: index.ts  (+4 more)
src/test/: setup.ts
(+50 files in other folders)
